cmake_minimum_required(VERSION 3.22)
project(chapter02)

set(CMAKE_CXX_STANDARD 20)

add_executable(chapter02 main.cpp R2.8-2.10.cpp R2.11.cpp R2.13.cpp R2.14.cpp includes/R2.14.h R2.15.cpp includes/R2.15.h R2.16.cpp includes/R2.16.h R2.17.cpp includes/R2.17.h R2.18.cpp includes/R2.18.h C2.1.cpp includes/C2.1.h C2.4.cpp includes/C2.4.h C2.5.cpp includes/C2.5.h C2.6.cpp includes/C2.6.h)
